Proyecto3/kafka-rabbit/k8s/rabbit-consumer.yaml
# rabbit-consumer.yaml (opcional, si también lo despliegas)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: clima-app
  labels:
    app: rabbit-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-consumer
  template:
    metadata:
      labels:
        app: rabbit-consumer
    spec:
      containers:
      - name: rabbit-consumer
        image: nonalcoholic-dixie-freshly.ngrok-free.dev/rabbit-consumer:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
