Proyecto3/kafka-rabbit/k8s/valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: clima-app
  labels:
    app: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: clima-app
spec:
  selector:
    app: valkey
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  clusterIP: None
